--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ github_username:  amaline
 markdown: kramdown
 
 prose:
-  rooturl: "_posts"
+  rooturl: "/_posts"
   metadata:
     _posts:
       - name: "layout"
