--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,13 @@ github_username:  amaline
 markdown: kramdown
 
 prose:
-  rooturl: "/_posts"
+  rooturl: '_posts'
+  siteurl: 'http://amaline.github.io/'
+  ignore:
+    - index.md
+    - _config.yml
+    - /_layouts
+    - /_includes
   metadata:
     _posts:
       - name: "layout"
