--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,8 @@ prose:
           label: "Layout"
           help: "Layout for the article"
           options: 
-	        - name: 'Blog post'
-              value: 'post'
+	        - name: "Blog post"
+              value: "post"
             - name: 'News post'
               value: 'news'
       - name: "categories"
