--- a/circle.yml
+++ b/circle.yml
@@ -5,14 +5,14 @@ machine:
 dependencies:
   override:
     - docker info
-    - docker run -v $(pwd):/tmp/site jekyll/jekyll  bash -l -c "ls /tmp/site"
+    - docker run -it -v $(pwd):/tmp/site jekyll/jekyll  bash -l -c "find /tmp/site -print"
     - docker run -v $(pwd):/srv/jekyll jekyll/jekyll jekyll build
-    - docker run -v $(pwd)/_site:/tmp/site jekyll/jekyll  bash -l -c "ls /tmp/site"
-    - docker build -t amaline/staticWebsite .
+    - docker run -it -v $(pwd)/_site:/tmp/site jekyll/jekyll  bash -l -c "find /tmp/site -print"
+    - docker build -t amaline/static_website .
 
 test:
   override:
-    - docker run -d -p 8080:80 amaline/staticWebsite; sleep 10
+    - docker run -d -p 8080:80 amaline/static_website; sleep 10
     - curl --retry 10 --retry-delay 5 -v http://localhost:8080/index.html
 
 deployment:
@@ -20,4 +20,4 @@ deployment:
     branch: master
     commands:
       - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
-      - docker push amaline/staticWebsite
+      - docker push amaline/static_website
