updated circle.yml to add docker image caching

--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,9 @@ prose:
     - _config.yml
     - /_layouts
     - /_includes
+    - circle.yml
+    - Dockerfile
+   
   metadata:
     _posts:
       - name: "layout"
