--- a/circle.yml
+++ b/circle.yml
@@ -8,24 +8,26 @@ machine:
 
 
 dependencies:
-  cache_directories:
-    - "~/docker"
+   cache_directories:
+     - "~/docker"
 
   override:
+     - cat ~/.aws/config | grep '^aws' > .env
      - gem install s3_website
-#    - docker info
-#    - if [[ -e ~/docker/jekyll.tar ]]; then docker load -i ~/docker/jekyll.tar ; fi
+     - docker info
+     - if [[ -e ~/docker/jekyll.tar ]]; then docker load -i ~/docker/jekyll.tar ; fi
 #    - if [[ -e ~/docker/nginx.tar ]]; then docker load -i ~/docker/nginx.tar ; fi
-#    - docker run -it -v $(pwd):/tmp/site jekyll/jekyll  bash -l -c "find /tmp/site -print"
-#    - docker run -v $(pwd):/srv/jekyll jekyll/jekyll jekyll build
-#    - docker run -it -v $(pwd)/_site:/tmp/site jekyll/jekyll  bash -l -c "find /tmp/site -print"
+     - docker run -it -v $(pwd):/tmp/site jekyll/jekyll  bash -l -c "find /tmp/site -print"
+     - docker run -v $(pwd):/srv/jekyll jekyll/jekyll jekyll build
+     - docker run -it -v $(pwd)/_site:/tmp/site jekyll/jekyll  bash -l -c "find /tmp/site -print"
 #    - docker build -t amaline/static_website .
-#    - mkdir -p ~/docker
-#    - docker save jekyll/jekyll > ~/docker/jekyll.tar
+     - mkdir -p ~/docker
+     - if [[ ! -e ~/docker/jekyll.tar ]]; then docker save jekyll/jekyll > ~/docker/jekyll.tar ; fi
 #    - docker save nginx > ~/docker/nginx.tar
 
 #test:
-#  override:
+  override:
+     - test -d _site
 #    - docker run -d -p 8080:80 amaline/static_website; sleep 10
 #    - curl --retry 10 --retry-delay 5 -v http://localhost:8080/index.html
 
