--- a/s3_website.yml
+++ b/s3_website.yml
@@ -23,7 +23,10 @@ s3_bucket: blog.maline.me
 
 # ignore_on_server: that_folder_of_stuff_i_dont_keep_locally
 
-# exclude_from_upload:
+exclude_from_upload:
+    - Dockerfile
+    - circle.yml
+    - config/
 #   - those_folders_of_stuff
 #   - i_wouldnt_want_to_upload
 
