--- a/circle.yml
+++ b/circle.yml
@@ -24,5 +24,4 @@ deployment:
     branch: master
     commands:
        - s3_website push
-       - curl https://api.uptimerobot.com/getMonitors?apiKey=${UPTIME_ROBOT_API_KEY}&logs=1&alertContacts=1&responseTimes=1&responseTimesAverage=180&format=json > monitors.json
-       - cat monitors.json
+       - curl -v https://api.uptimerobot.com/getMonitors?apiKey=${UPTIME_ROBOT_API_KEY}&format=json 
