--- a/circle.yml
+++ b/circle.yml
@@ -24,5 +24,5 @@ deployment:
     branch: master
     commands:
        - s3_website push
-       - curl -i -H "Accept: application/json" -H "Content-Type: application/json" -X GET https://api.uptimerobot.com/getMonitors?apiKey=${UPTIME_ROBOT_API_KEY}&format=json 
+       - curl -i -H 'Accept: application/json' -H 'Content-Type: application/json' -X GET https://api.uptimerobot.com/getMonitors?apiKey=${UPTIME_ROBOT_API_KEY}&format=json 
        - ls -l
