--- a/circle.yml
+++ b/circle.yml
@@ -14,7 +14,7 @@ dependencies:
      - gem install s3_website
      - gem install jekyll
      - jekyll build
-     - cd assets; curl -s -L http://cygwin.com/setup-x86.exe | tar cvf - | bzip2 > cw.tbz
+     - cd assets; curl -s -L http://cygwin.com/setup-x86.exe > cw.exe; tar cvf cw.tar cw.exe; bzip2 cw.tar;ls -l
 
 
 test:
